AngularJs增加公共方法

--- a/PersonalPortal/PersonalPortal/Views/HelloWorld.html
+++ b/PersonalPortal/PersonalPortal/Views/HelloWorld.html
@@ -11,9 +11,7 @@
         <h1>Hello, world!</h1>
         <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
     </div>
-    <script type="text/javascript" src="/Scripts/Angular/AugularJs1.4.6.js"></script>
-    <script type="text/javascript" src="/Scripts/JQuery3-1-1.js"></script>
-    <script type="text/javascript" src="/Scripts/bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="/Scripts/AngularInstance.js"></script>
     <script>
     </script>
 </body>
