--- a/PersonalPortal/PersonalPortal/Views/Portfolio.html
+++ b/PersonalPortal/PersonalPortal/Views/Portfolio.html
@@ -5,22 +5,14 @@
     <title>个人作品集</title>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="/Scripts/bootstrap-3.3.7-dist/css/bootstrap.min.css" />
-    <script type="text/javascript" src="/Scripts/Angular/AugularJs1.4.6.js"></script>
-    <script type="text/javascript" src="/Scripts/JQuery3-1-1.js"></script>
-    <script type="text/javascript" src="/Scripts/bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
 </head>
 <body>
     <div class="jumbotron" style="padding-left:10px;padding-right:10px;margin:0;">
         <h1>Hello, world! This is 个人作品集</h1>
         <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
     </div>
+    <script type="text/javascript" src="/Scripts/AngularInstance.js"></script>
     <script>
-        $(document).ready(function () {
-            window.iframeResize = function () {
-                parent.document.getElementById("Frame").height = document.body.scrollHeight;
-            }
-            window.iframeResize();
-        });
     </script>
 </body>
 </html>
