--- a/PersonalPortal/PersonalPortal/Views/Index.html
+++ b/PersonalPortal/PersonalPortal/Views/Index.html
@@ -29,6 +29,27 @@
         .dropdown:hover {
             box-shadow: 0px 1px 3px #999;
         }
+
+        .toTop {
+            margin: 100px 90px;
+            display: none;
+        }
+
+            .toTop a {
+                background-color: white;
+                text-decoration: none;
+                width: 45px;
+                height: 45px;
+                float: right;
+                line-height: 45px;
+                text-align: center;
+                border-radius: 5px;
+                opacity: 0.8;
+            }
+
+                .toTop a:hover {
+                    background-color: #eee;
+                }
     </style>
 </head>
 <body>
@@ -70,6 +91,7 @@
             </div>
         </nav>
         <iframe id="Frame" name="Frame" class="shadow" src="/Views/HelloWorld.html"></iframe>
+        <div class="navbar-fixed-bottom toTop"><a data-toggle="tooltip" data-placement="left" title="返回顶部" class="glyphicon glyphicon-chevron-up" href="#top"></a></div>
     </div>
     <script type="text/javascript" src="/Scripts/AngularInstance.js"></script>
     <script>
@@ -79,11 +101,17 @@
             iframeResize = function () {
                 try {
                     frame.height = Math.min(Frame.document.documentElement.scrollHeight, Frame.document.body.scrollHeight);
+                    if (frame.height > window.screen.availHeight) {
+                        $(".toTop").show();
+                    } else {
+                        $(".toTop").hide();
+                    }
                     frame.scrolling = "no";
                 } catch (e) {
                     //跨域
                     frame.height = window.innerHeight - 110;
                     frame.scrolling = "yes";
+                    $(".toTop").hide();
                 }
             }
             iframeResize();
