--- a/PersonalPortal/PersonalPortal/Views/ToolsBox/Encryption.html
+++ b/PersonalPortal/PersonalPortal/Views/ToolsBox/Encryption.html
@@ -23,6 +23,10 @@
         .full {
             width: 100%;
         }
+
+        .ng-cloak {
+            display: none;
+        }
     </style>
 </head>
 <body>
@@ -30,36 +34,36 @@
         <header class="header">
             <ul ng-cloak class="nav nav-tabs nav-tabs-justified">
                 <li ng-repeat="x in mainData" ng-class="{true:'active'}[selectedIndex == $index]">
-                    <a href="#" ng-click="SetTitle($index)">{{x.title}}</a>
+                    <a href="#" ng-click="SetTitle($index)" ng-bind="x.title"></a>
                 </li>
             </ul>
         </header>
-        <div ng-cloak class="alert alert-danger alert-dismissible" ng-hide="IsNull(warning)" style="margin-top:10px;margin-bottom:0;" role="alert">
+        <div ng-cloak class="alert alert-danger alert-dismissible ng-cloak" ng-hide="IsNull(warning)" style="margin-top:10px;margin-bottom:0;" role="alert">
             <span ng-bind="warning"></span>
             <button type="button" class="close" ng-click="warning=''" aria-label="Close"><span aria-hidden="true">&times;</span></button>
         </div>
-        <div class="navbar-left" style="width:35%;">
+        <div class="navbar-left" style="width: 35%;">
             <textarea class="highlight well form-control" style="height: 600px;" ng-model="leftText"></textarea>
         </div>
-        <div class="navbar-right" style="width:35%;">
+        <div class="navbar-right" style="width: 35%; margin-right: 0;">
             <textarea class="highlight well form-control" style="height: 600px;" ng-model="rightText"></textarea>
         </div>
-        <div style="margin:100px auto;width:150px;">
-            <div ng-cloak class="input-group full" style="margin:10px 0;" ng-hide="mainData[selectedIndex].type.length<=1">
+        <div style="margin: 100px auto; width: 150px;">
+            <div ng-cloak class="input-group full" style="margin: 10px 0;" ng-hide="mainData[selectedIndex].type.length<=1">
                 <button type="button" class="btn btn-default dropdown-toggle full" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     <span ng-bind="selectedType"></span>  <span class="caret"></span>
                 </button>
                 <ul class="dropdown-menu">
                     <li ng-repeat="x in mainData[selectedIndex].type" value="{{x}}">
-                        <a href="#" ng-click="SetValue('selectedType',x)">{{x}}</a>
+                        <a href="#" ng-click="SetValue('selectedType',x)" ng-bind="x"></a>
                     </li>
                 </ul>
             </div>
-            <button ng-cloak class="btn btn-default full" ng-click="Encode()" style="margin:10px 0;">
+            <button ng-cloak class="btn btn-default full ng-cloak" ng-click="Encode()" style="margin:10px 0;">
                 {{mainData[selectedIndex].toButton.title}}
                 <i class="glyphicon glyphicon-chevron-right"></i>
             </button>
-            <button ng-cloak class="btn btn-default full" ng-click="Decode()" style="margin:10px 0;">
+            <button ng-cloak class="btn btn-default full ng-cloak" ng-click="Decode()" style="margin:10px 0;">
                 <i class="glyphicon glyphicon-chevron-left"></i>
                 {{mainData[selectedIndex].backButton.title}}
             </button>
