--- a/PersonalPortal/PersonalPortal/Views/Index.html
+++ b/PersonalPortal/PersonalPortal/Views/Index.html
@@ -91,7 +91,7 @@
             </div>
         </nav>
         <iframe id="Frame" name="Frame" class="shadow" src="/Views/HelloWorld.html"></iframe>
-        <div class="navbar-fixed-bottom toTop"><a data-toggle="tooltip" data-placement="left" title="返回顶部" class="glyphicon glyphicon-chevron-up" href="#top"></a></div>
+        <div class="navbar-fixed-bottom toTop"><a data-toggle="tooltip" data-placement="left" title="返回顶部" class="glyphicon glyphicon-chevron-up visible-lg" href="#top"></a></div>
     </div>
     <script type="text/javascript" src="/Scripts/AngularInstance.js"></script>
     <script>
