--- a/PersonalPortal/PersonalPortal/Views/HelloWorld.html
+++ b/PersonalPortal/PersonalPortal/Views/HelloWorld.html
@@ -8,33 +8,68 @@
     <link rel="stylesheet" href="/Scripts/bootstrap-3.3.7-dist/css/docs.min.css" />
     <style>
         .main {
-            background: url('/Images/helloWorld.jpg') 0 0 repeat #dedede;
             margin: 0;
-            height: 800px;
             color: white;
             font-family: Montserrat-Bold;
+            display: inline-block;
+            padding: 50px 35px;
         }
 
-            .main div, h1 {
-                width: 700px;
+        .bigSize {
+            font-size: 50px;
+            color: white;
+        }
+
+        .shortCut {
+            height: 210px;
+            margin: 20px 35px;
+            border-radius: 5px;
+            float: left;
+            border: 1px solid white;
+        }
+
+            .shortCut button {
+                color: rgb(60,60,60);
+                width: 100%;
+                height: 85%;
+                border: none;
+                background-color: white;
+                opacity: 0.8;
+                border-radius: 5px 5px 0 0;
+                font-size: 30px;
+                font-weight: 100;
+                line-height: 178.5px;
+                letter-spacing: 8px;
             }
 
-            .main div {
-                padding: 50px 30px;
-                background-color: black;
-                opacity: 0.4;
+            .shortCut p {
+                background-color: rgb(60,60,60);
+                height: 15%;
+                cursor: pointer;
+                text-align: center;
+                font-size: 12px;
+                vertical-align: middle;
+                line-height: 31.5px;
+                margin: 0;
+                border-radius: 0 0 5px 5px;
             }
 
-            .main h1 {
-                font-weight: bolder;
+            .shortCut:hover {
+                color: rgb(0,173,238);
+                -webkit-box-shadow: 0px 0px 5px rgb(0,173,238);
+                box-shadow: 0px 0px 5px rgb(0,173,238);
             }
+
+        }
     </style>
 </head>
 <body>
-    <div class="jumbotron main">
-        <div>
-            <h1>Hello。</h1>
-            <h1>这是小雨的个人网站。</h1>
+    <div ng-app="app" ng-controller="controller" class="jumbotron main">
+        <div class="nav navbar-nav navbar-left">
+            <div class="shortCut" ng-repeat="item in ShortCutList" ng-click="Goto(item.ShortCutUrl)">
+                <button ng-style="style_{{$index}}"><span ng-class="{true:'glyphicon glyphicon-plus', false:'bigSize'}[IsNull(item.ShortCutUrl)]" ng-bind="GetName(item.ShortCutUrl, $index)"></span></button>
+                <p ng-bind="item.ShortCutName"></p>
+            </div>
         </div>
     </div>
     <footer class="bs-docs-footer" style="margin:0;padding-top:30px;padding-bottom:10px;">
@@ -50,6 +85,40 @@
     </footer>
     <script type="text/javascript" src="/Scripts/AngularInstance.js"></script>
     <script>
+        $(".shortCut").width((document.body.scrollWidth - 350 - 8) / 4.0);
+        Angular(function ($scope, factory) {
+            var colorLibrary = ['#3b5999', '#0084ff', '#55acee', '#0077B5', '#00AFF0', '#007ee5', '#21759b', '#1ab7ea', '#0077b5', '#4c75a3', '#34465d', '#410093', '#dd4b39', '#bd081c', '#cd201f', '#eb4924', '#ff5700', '#b92b27', '#af0606', '#df2029', '#da552f', '#ff6600', '#ff3300', '#f57d00', '#25D366', '#09b83e', '#00c300', '#02b875', '#00b489', '#3aaf85', '#e4405f', '#ea4c89', '#ff0084', '#f94877', '#131418', '#FFFC00'];
+            factory.Query('/Controller/Index/GetShortCut').then(function (data) {
+                $scope.ShortCutList = data.ShortCutList;
+            });
+            $scope.IsNull = factory.IsNull;
+            $scope.Goto = function (url) {
+                if (!$scope.IsNull(url)) {
+                    window.open(url, '_blank');
+                }
+            }
+            $scope.GetName = function (name, index) {
+                if (!$scope.IsNull(name)) {
+                    var regex = new RegExp('http://(www\.|)([^.]*)\.');
+                    try {
+                        name = name.match(regex)[2];
+                    } catch (e) { }
+
+                    $scope['style_' + index] = {
+                        "background-color": colorLibrary[$scope.GetNumber(name) % colorLibrary.length]
+                    }
+                    return name;
+                }
+                return '';
+            }
+            $scope.GetNumber = function (name) {
+                var number = 0;
+                for (var i = 0; i < name.length; i++) {
+                    number += name[i].charCodeAt();
+                }
+                return number;
+            }
+        });
     </script>
 </body>
 </html>
