--- a/PersonalPortal/PersonalPortal/Views/HelloWorld.html
+++ b/PersonalPortal/PersonalPortal/Views/HelloWorld.html
@@ -40,6 +40,7 @@
                 font-weight: 100;
                 line-height: 178.5px;
                 letter-spacing: 8px;
+                border-bottom: 1px solid white;
             }
 
             .shortCut p {
