--- a/PersonalPortal/PersonalPortal/Views/HelloWorld.html
+++ b/PersonalPortal/PersonalPortal/Views/HelloWorld.html
@@ -6,70 +6,50 @@
     <meta charset="utf-8" />
     <link rel="stylesheet" href="/Scripts/bootstrap-3.3.7-dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="/Scripts/bootstrap-3.3.7-dist/css/docs.min.css" />
-    <style>
-        .main {
-            margin: 0;
-            color: white;
-            font-family: Montserrat-Bold;
-            display: inline-block;
-            padding: 50px 35px;
-        }
-
-        .bigSize {
-            font-size: 50px;
-            color: white;
-        }
-
-        .shortCut {
-            height: 210px;
-            margin: 20px 35px;
-            border-radius: 5px;
-            float: left;
-            border: 1px solid white;
-        }
-
-            .shortCut button {
-                color: rgb(60,60,60);
-                width: 100%;
-                height: 85%;
-                border: none;
-                background-color: white;
-                opacity: 0.8;
-                border-radius: 5px 5px 0 0;
-                font-size: 30px;
-                font-weight: 100;
-                line-height: 178.5px;
-                letter-spacing: 8px;
-                border-bottom: 1px solid white;
-            }
-
-            .shortCut p {
-                background-color: rgb(60,60,60);
-                height: 15%;
-                cursor: pointer;
-                text-align: center;
-                font-size: 12px;
-                vertical-align: middle;
-                line-height: 31.5px;
-                margin: 0;
-                border-radius: 0 0 5px 5px;
-            }
-
-            .shortCut:hover {
-                color: rgb(0,173,238);
-                -webkit-box-shadow: 0px 0px 5px rgb(0,173,238);
-                box-shadow: 0px 0px 5px rgb(0,173,238);
-            }
-
-        }
-    </style>
+    <link rel="stylesheet" href="/Style/Css/HelloWorld.css" />
 </head>
 <body>
-    <div ng-app="app" ng-controller="controller" class="jumbotron main">
+    <div ng-cloak ng-app="app" ng-controller="controller" class="jumbotron main ng-cloak">
         <div class="nav navbar-nav navbar-left">
-            <div class="shortCut" ng-repeat="item in ShortCutList" ng-click="Goto(item.ShortCutUrl)">
-                <button ng-style="style_{{$index}}"><span ng-class="{true:'glyphicon glyphicon-plus', false:'bigSize'}[IsNull(item.ShortCutUrl)]" ng-bind="GetName(item.ShortCutUrl, $index)"></span></button>
-                <p ng-bind="item.ShortCutName"></p>
+            <div class="shortCut" ng-repeat="item in ShortCutList" ng-mouseenter="SetValue('hover_', true, $index)" ng-mouseleave="SetValue('hover_', false, $index)">
+                <!--添加Button-->
+                <button ng-cloak class="mainButton ng-cloak" ng-show="IsNull(item.ShortCutUrl)" ng-click="SetModel($index)" data-toggle="modal" data-target="#myModal">
+                    <span class="glyphicon glyphicon-plus icon"></span>
+                </button>
+                <!--链接Button-->
+                <button ng-cloak class="mainButton ng-cloak" ng-hide="IsNull(item.ShortCutUrl)" ng-click="Goto(item.ShortCutUrl)" ng-style="style_{{$index}}">
+                    <span class="bigSize" ng-bind="GetName(item.ShortCutUrl, $index)"></span>
+                </button>
+                <p ng-bind="item.ShortCutName" ng-click="Goto(item.ShortCutUrl)"></p>
+                <!--修改Button-->
+                <button ng-cloak ng-show="hover_{{$index}} && !IsNull(item.ShortCutUrl)" ng-click="SetModel($index)" data-toggle="modal"
+                        data-target="#myModal" class="float left ng-cloak glyphicon glyphicon-pencil"></button>
+                <!--删除Button-->
+                <button ng-cloak ng-show="hover_{{$index}} && !IsNull(item.ShortCutUrl)" ng-click="Save($index)"
+                        class="float right ng-cloak glyphicon glyphicon-remove closeButton"></button>
+            </div>
+        </div>
+        <!--模态框-->
+        <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+            <div class="modal-dialog" role="document" style="margin-top:180px;">
+                <div class="modal-content">
+                    <div class="modal-body">
+                        <br />
+                        <div class="input-group">
+                            <span class="input-group-addon" id="basic-name">网站名称</span>
+                            <input type="text" ng-model="inputName" class="form-control" aria-describedby="basic-name">
+                        </div>
+                        <br />
+                        <div class="input-group">
+                            <span class="input-group-addon" id="basic-url">网站地址</span>
+                            <input type="text" ng-model="inputUrl" class="form-control" aria-describedby="basic-url">
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
+                        <button type="button" class="btn btn-primary" data-dismiss="modal" ng-click="Save()">保存</button>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -77,34 +57,62 @@
         <div class="container">
             <p style="margin-bottom:10px;">本网站为肖禹个人网站，感谢以下开源项目：</p>
             <ul class="bs-docs-footer-links">
-                <li><a href="https://github.com/twbs/bootstrap">GitHub 仓库</a></li>
-                <li><a href="../getting-started/#examples">实例</a></li>
-                <li><a href="http://www.youzhan.org">优站精选</a></li>
+                <li><a href="https://github.com/twbs/bootstrap" target="_blank">GitHub 仓库</a></li>
+                <li><a href="http://www.bootcss.com/" target="_blank">BootStrap中文网</a></li>
+                <li><a href="http://www.youzhan.org" target="_blank">优站精选</a></li>
                 <li><a href="../about/">关于</a></li>
             </ul>
         </div>
     </footer>
     <script type="text/javascript" src="/Scripts/AngularInstance.js"></script>
     <script>
-        $(".shortCut").width((document.body.scrollWidth - 350 - 8) / 4.0);
+        $(".shortCut").width((document.body.scrollWidth - 290 - 8) / 4.0);
         Angular(function ($scope, factory) {
-            var colorLibrary = ['#3b5999', '#0084ff', '#55acee', '#0077B5', '#00AFF0', '#007ee5', '#21759b', '#1ab7ea', '#0077b5', '#4c75a3', '#34465d', '#410093', '#dd4b39', '#bd081c', '#cd201f', '#eb4924', '#ff5700', '#b92b27', '#af0606', '#df2029', '#da552f', '#ff6600', '#ff3300', '#f57d00', '#25D366', '#09b83e', '#00c300', '#02b875', '#00b489', '#3aaf85', '#e4405f', '#ea4c89', '#ff0084', '#f94877', '#131418', '#FFFC00'];
-            factory.Query('/Controller/Index/GetShortCut').then(function (data) {
-                $scope.ShortCutList = data.ShortCutList;
-            });
+            var colorLibrary = ['#3b5999', '#0084ff', '#55acee', '#0077B5', '#00AFF0', '#007ee5', '#21759b', '#1ab7ea', '#0077b5', '#4c75a3', '#34465d', '#410093', '#dd4b39', '#bd081c', '#cd201f', '#eb4924', '#ff5700', '#b92b27', '#af0606', '#df2029', '#da552f', '#ff6600', '#ff3300', '#f57d00', '#25D366', '#da552f', '#df2029', '#02b875', '#00b489', '#3aaf85', '#e4405f', '#ea4c89', '#ff0084', '#f94877', '#131418', '#FFFC00'];
+            $scope.GetShortCut = function (refresh) {
+                factory.Query('/Controller/Index/GetShortCut', refresh).then(function (data) {
+                    $scope.ShortCutList = data.ShortCutList;
+                });
+            }
+            $scope.GetShortCut(false);
             $scope.IsNull = factory.IsNull;
+
             $scope.Goto = function (url) {
                 if (!$scope.IsNull(url)) {
                     window.open(url, '_blank');
                 }
             }
+
+            $scope.Save = function (index) {
+                if (!$scope.IsNull(index)) {
+                    //删除
+                    $scope.inputId = $scope.ShortCutList[index].Id;
+                    $scope.inputName = '';
+                    $scope.inputUrl = '';
+                }
+                factory.Query('/Controller/Index/SetShortCut?Id=' + $scope.inputId + "&ShortCutName=" + $scope.inputName + "&ShortCutUrl=" + encodeURIComponent($scope.inputUrl), true);
+                $scope.GetShortCut(true);
+            }
+
+            $scope.SetValue = function (key, value, added) {
+                $scope[key + added] = value;
+            }
+
+            $scope.SetModel = function (index) {
+                //填充模态框
+                $scope.inputId = $scope.ShortCutList[index].Id;
+                $scope.inputName = $scope.ShortCutList[index].ShortCutName;
+                $scope.inputUrl = $scope.ShortCutList[index].ShortCutUrl;
+            }
+
             $scope.GetName = function (name, index) {
                 if (!$scope.IsNull(name)) {
-                    var regex = new RegExp('http://(www\.|)([^.]*)\.');
+                    var regex = new RegExp('(http|https)://(www\.|)([^.]*)\.');
                     try {
-                        name = name.match(regex)[2];
+                        name = name.match(regex)[3];
                     } catch (e) { }
 
+                    console.log(name, 206% colorLibrary.length);
                     $scope['style_' + index] = {
                         "background-color": colorLibrary[$scope.GetNumber(name) % colorLibrary.length]
                     }
@@ -112,6 +120,16 @@
                 }
                 return '';
             }
+
+            factory.Query('/Controller/Index/DelegateQuery?url=http://whois.pconline.com.cn/ipJson.jsp').then(function (data) {
+                var info = JSON.parse(data.Result.match(/{\"[^}]*\"}/g)[0]);
+                console.log('外网IP:', info.ip);
+                console.log('所在城市:', info.pro, info.city);
+                factory.Query('https://free-api.heweather.com/v5/weather?key=b8572b0c0502416996c8bbe7613233e9&city=' + info.city).then(function (data) {
+                    console.log("当前温度：" + data.HeWeather5[0].now.tmp);
+                });
+            });
+
             $scope.GetNumber = function (name) {
                 var number = 0;
                 for (var i = 0; i < name.length; i++) {
