--- a/PersonalPortal/PersonalPortal/Views/Index.html
+++ b/PersonalPortal/PersonalPortal/Views/Index.html
@@ -4,53 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>小雨个人网站</title>
     <link rel="stylesheet" href="/Scripts/bootstrap-3.3.7-dist/css/bootstrap.min.css" />
-    <style>
-        body {
-            width: 80%;
-            margin: auto;
-            background: url('/Images/bg.png') 0 0 repeat #dedede;
-        }
-
-        iframe {
-            border: none;
-            width: 100%;
-            border-radius: 4px;
-            margin-bottom: 30px;
-        }
-
-        .shadow {
-            box-shadow: 0 2px 2px 1px #999;
-        }
-
-        .ng-cloak {
-            display: none;
-        }
-
-        .dropdown:hover {
-            box-shadow: 0px 1px 3px #999;
-        }
-
-        .toTop {
-            margin: 100px 90px;
-            display: none;
-        }
-
-            .toTop a {
-                background-color: white;
-                text-decoration: none;
-                width: 45px;
-                height: 45px;
-                float: right;
-                line-height: 45px;
-                text-align: center;
-                border-radius: 5px;
-                opacity: 0.8;
-            }
-
-                .toTop a:hover {
-                    background-color: #eee;
-                }
-    </style>
+    <link rel="stylesheet" href="/Style/Css/Index.css" />
 </head>
 <body>
     <div ng-app="app" ng-controller="controller">
@@ -95,15 +49,12 @@
     </div>
     <script type="text/javascript" src="/Scripts/AngularInstance.js"></script>
     <script>
-        function IPCallBack(data) {
-            console.log(data);
-        }
         //动态调整框架高度
         $(document).ready(function () {
             var frame = document.getElementById("Frame");
             iframeResize = function () {
                 try {
-                    frame.height = Math.min(Frame.document.documentElement.scrollHeight, Frame.document.body.scrollHeight);
+                    frame.height = Math.min(Frame.document.documentElement.scrollHeight, Frame.document.body.scrollHeight) - 5;
                     if (frame.height > window.screen.availHeight) {
                         $(".toTop").show();
                     } else {
@@ -130,14 +81,6 @@
             }
             factory.Query('/Controller/Index/GetIndex').then(function (data) {
                 $scope.Navigation = data.Navigation;
-            });
-            factory.Query('/Controller/Index/DelegateQuery?url=http://whois.pconline.com.cn/ipJson.jsp').then(function (data) {
-                var info = JSON.parse(data.Result.match(/{\"[^}]*\"}/g)[0]);
-                console.log('外网IP:', info.ip);
-                console.log('所在城市:', info.pro, info.city);
-                factory.Query('/Controller/Index/DelegateQuery?url=https%253A%252F%252Ffree-api.heweather.com%252Fv5%252Fweather%253Fkey%253Db8572b0c0502416996c8bbe7613233e9%2526city%253D' + info.city).then(function (data) {
-                    console.log("当前温度：" + JSON.parse(data.Result).HeWeather5[0].now.tmp);
-                });
             });
             $scope.Enter = factory.Enter;
         });
