--- a/PersonalPortal/PersonalPortal/Style/Css/HelloWorld.css
+++ b/PersonalPortal/PersonalPortal/Style/Css/HelloWorld.css
@@ -1,4 +1,13 @@
-﻿.main {
+﻿body {
+    background-color: rgb(238, 238, 238);
+}
+
+.content {
+    clear: both;
+    margin: 0 !important;
+}
+
+.main {
     margin: 0;
     color: white;
     font-family: Montserrat-Bold;
@@ -26,7 +35,6 @@
         color: rgb(60,60,60);
         width: 100%;
         height: 85%;
-        border: none;
         background-color: white;
         opacity: 0.8;
         border-radius: 5px 5px 0 0;
@@ -34,6 +42,7 @@
         font-weight: 100;
         line-height: 178.5px;
         letter-spacing: 8px;
+        border: none;
         border-bottom: 1px solid white;
     }
 
@@ -91,6 +100,39 @@
         -webkit-box-shadow: 0px 0px 5px rgb(0,173,238);
         box-shadow: 0px 0px 5px rgb(0,173,238);
     }
+
+.weather {
+    color: black;
+}
+
+    .weather * {
+        color: #777;
+        float: left;
+        font-size: 14px !important;
+        font-family: 'Microsoft YaHei UI';
+        font-weight: normal !important;
+    }
+
+    .weather span {
+        float: none;
+    }
+
+    .weather div {
+        width: 85%;
+    }
+
+    .weather p {
+        margin-right: 20px;
+    }
+
+.logo img {
+    float: right;
+    position: absolute;
+    top: 75px;
+    height: 50px;
+    right: 100px;
+    opacity: 0.7;
+}
 
 .ng-cloak {
     display: none;
